# lxqt-brightness

./: Cargo.toml  README.md  README.org  build.rs
src/: main.rs
