[package]
name = "lxqt-brightness-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify-rust = "4"

[package.metadata.deb]
maintainer = "Manuel Albisu-Bouza <malbisu@mailchao.com"
depends = "libnotify4, xbacklight"
license-file = "LICENSE"
section = "utils"
priority = "optional"
copyright = "(C) 2025 Manuel Albisu-Bouza"
