[package]
name         = "lxqt-brightness"
version      = "1.1.0"
edition      = "2024"
build        = "build.rs"
authors      = ["Manuel Albisu-Bouza <malbisu@mailchao.com>"]
license      = "GPLv3.0"
description  = "Simple CLI tool for controlling screen brightness and displaying notifications in LXQt."
readme       = "README.org"

[dependencies]
clap = { version = "4", features = ["derive"] }

[package.metadata.deb]
maintainer = "Manuel Albisu-Bouza <malbisu@mailchao.com>"
section    = "utils"
priority   = "optional"
depends    = ["libnotify-bin", "xbacklight"]
